kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: react
  namespace: _{_NAMESPACE_}_
spec:
    rules:
    - host: react-_{_NAMESPACE_}_.192.168.0.194.nip.io

      http:
        paths:
        - backend:
            service:
              name: react
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - react-_{_NAMESPACE_}_.192.168.0.194.nip.io
      secretName: ingress-local-tls
